--- a/html/project/project_output.html
+++ b/html/project/project_output.html
@@ -44,46 +44,20 @@
       <div class="project_wrap">
         <div class="project_row row_01">
           <div class="project_item item_01">
-            <a href="https://haneulkimgreen.github.io/rwd_yg/" target="_blank">
-              <img src="../../img/project_output/output_yg.png" alt="와이지 엔터테인먼트 리뉴얼">
+             <a href="https://haneulkimgreen.github.io/spa/html/project/video_netflix.html" target="_blank">
+              <img src="" alt="비디오 플레이어 작업중입니다.">
               <div class="item_info">
                 <div class="info_txtwrap">
-                  <p class="info_title">YG 엔터테인먼트 리뉴얼</p>
-                  <p>화면구성 디자인 <span>&#8226;</span> 퍼블리싱 <span>&#8226;</span> 2018.04(1개월)</p>
-                  <p>반응형(PC, 태블릿, 모바일) <span>&#8226;</span> 4페이지 <span>&#8226;</span> 역동적</p>
-                  <p>크롬 <span>&#8226;</span> 파이어폭스 <span>&#8226;</span> IE11 <span>&#8226;</span> 엣지 <span>&#8226;</span> 오페라</p>
+                  <p class="info_title">비디오 플레이어 - 넷플릭스(개인, 비상업)</p>
+                  <p>퍼블리싱 <span>&#8226;</span> 2019.08</p>
+                  <p>비디오 플레이어 <span>&#8226;</span> 넷플릭스 구현 <span>&#8226;</span> PC</p>
+                  <p>기능을 추가중입니다.</p>
                 </div>
               </div>
             </a>
           </div>
           <div class="project_item item_02">
-            <a href="https://haneulkimgreen.github.io/rwd_yg/html/yg_06_artist_detail_main.html" target="_blank">
-              <img src="../../img/project_output/output_yg_artist.png" alt="와이지 엔터테인먼트 아티스트 상세페이지 리뉴얼">
-              <div class="item_info">
-                <div class="info_txtwrap">
-                  <p class="info_title">YG 아티스트 페이지 리뉴얼</p>
-                  <p>화면구성 <span>&#8226;</span> 디자인 <span>&#8226;</span> 퍼블리싱 <span>&#8226;</span> 2018.04(1개월)</p>
-                  <p>반응형(PC, 태블릿, 모바일) <span>&#8226;</span> 3페이지</p>
-                  <p>크롬 <span>&#8226;</span> 파이어폭스 <span>&#8226;</span> IE11 <span>&#8226;</span> 엣지 <span>&#8226;</span> 오페라</p>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="project_item item_03">
-            <a href="https://haneulkimgreen.github.io/spa/html/project/video_netflix.html" target="_blank">
-              <img src="" alt="비디오 플레이어 작업중입니다.">
-              <div class="item_info">
-                <div class="info_txtwrap">
-                  <p class="info_title">비디오 플레이어(넷플릭스 구현)</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 2019.08</p>
-                  <p>PC <span>&#8226;</span> 비디오 플레이어 <span>&#8226;</span> 넷플릭스 구현</p>
-                  <p>추가할 작업 키보드 제어, 마우스에 따른 컨트롤러 제어</p>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="project_item item_04">
-            <a href="#" target="_blank">
+             <a href="#" target="_blank">
               <img src="../../img/project_output/netflix_my.png" alt="넷플릭스 목록 구현, 현재 프로젝트 정리 페이지로 활용">
               <div class="item_info">
                 <div class="info_txtwrap">
@@ -95,20 +69,59 @@
               </div>
             </a>
           </div>
-          <div class="project_item item_05">
-            <a href="project_boolatoon.html" target="_blank">
-              <img src="../../img/project_output/output_boolatoon.png" alt="불라툰 경력 정리">
+          <div class="project_item item_03">
+            <a href="https://haneulkimgreen.github.io/rwd_yg/" target="_blank">
+              <img src="../../img/project_output/output_yg.png" alt="와이지 엔터테인먼트 리뉴얼">
               <div class="item_info">
                 <div class="info_txtwrap">
-                  <p class="info_title">불라툰 경력 소개</p>
-                  <p>퍼블리싱 <span>&#8226;</span> UX <span>&#8226;</span> 2018.05 ~ 2018.09 (4개월)</p>
-                  <p>경영악화로 인한 퇴사, 현재 1인 기업</p>
-                  <p>반응형 퍼블리싱 <span>&#8226;</span> UX <span>&#8226;</span> 웹애플리케이션</p>
+                  <p class="info_title">YG 엔터테인먼트 리뉴얼(개인, 비상업)</p>
+                  <p>퍼블리싱을 포함한 전체 <span>&#8226;</span> 2018.04(1개월)</p>
+                  <p>반응형(PC, 태블릿, 모바일) <span>&#8226;</span> 4페이지 <span>&#8226;</span> 역동적</p>
+                  <p>크롬 <span>&#8226;</span> 파이어폭스 <span>&#8226;</span> IE11 <span>&#8226;</span> 엣지 <span>&#8226;</span> 오페라</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="project_item item_04">
+            <a href="https://haneulkimgreen.github.io/rwd_yg/html/yg_06_artist_detail_main.html" target="_blank">
+              <img src="../../img/project_output/output_yg_artist.png" alt="와이지 엔터테인먼트 아티스트 상세페이지 리뉴얼">
+              <div class="item_info">
+                <div class="info_txtwrap">
+                  <p class="info_title">YG 아티스트 페이지 리뉴얼(개인, 비상업)</p>
+                  <p>퍼블리싱을 포함한 전체 <span>&#8226;</span> 2018.04(1개월)</p>
+                  <p>반응형(PC, 태블릿, 모바일) <span>&#8226;</span> 3페이지</p>
+                  <p>크롬 <span>&#8226;</span> 파이어폭스 <span>&#8226;</span> IE11 <span>&#8226;</span> 엣지 <span>&#8226;</span> 오페라</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="project_item item_05">
+            <a href="#" target="_blank">
+              <img src="" alt="추가 예정입니다.">
+              <div class="item_info">
+                <div class="info_txtwrap">
+                  <p class="info_title"></p>
+                  <p></p>
+                  <p></p>
+                  <p></p>
                 </div>
               </div>
             </a>
           </div>
           <div class="project_item item_06">
+            <a href="#" target="_blank">
+              <img src="" alt="추가 예정입니다.">
+              <div class="item_info">
+                <div class="info_txtwrap">
+                  <p class="info_title"></p>
+                  <p></p>
+                  <p></p>
+                  <p></p>
+                </div>
+              </div>
+            </a>
+          </div>
+<!--           <div class="project_item item_06">
             <a href="project_acg.html" target="_blank">
               <img src="../../img/project_output/output_acg.png" alt="어센더즈">
               <div class="item_info">
@@ -120,7 +133,7 @@
                 </div>
               </div>
             </a>
-          </div>
+          </div> -->
         </div>
         <!-- //project_row 01 -->
         <div class="project_row row_02">
@@ -129,75 +142,78 @@
               <img src="../../img/project_output/output_free_mobile.png" alt="프리랜서 모바일 3페이지">
               <div class="item_info">
                 <div class="info_txtwrap">
-                  <p class="info_title">프리랜서 모바일</p>
+                  <p class="info_title">모바일 페이지(프리랜서, 상업)</p>
                   <p>퍼블리싱 <span>&#8226;</span> 2019.09(1일, 프리랜서)</p>
-                  <p>모바일 전용 <span>&#8226;</span> 종류에 따른 3단계로 세분화 <span>&#8226;</span> 3페이지</p>
-                  <p>3페이지를 360 ~ 454, 455 ~ 550, 551이상으로 세분화</p>
+                  <p>모바일 3단계 세분화 <span>&#8226;</span> 3페이지 <span>&#8226;</span> 스와이프 배너</p>
+                  <p>크롬 <span>&#8226;</span> 파이어폭스 <span>&#8226;</span> IE11 <span>&#8226;</span> 엣지 <span>&#8226;</span> 오페라</p>
                 </div>
               </div>
             </a>
           </div>
           <div class="project_item item_08">
-            <a href="#">
-              <img src="" alt="추가 예정입니다!">
+            <a href="project_boolatoon.html" target="_blank">
+              <img src="../../img/project_output/output_boolatoon.png" alt="불라툰 경력 정리">
               <div class="item_info">
                 <div class="info_txtwrap">
-                  <p class="info_title">프로젝트명</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 날짜</p>
-                  <p>반응형(PC, 태블릿, 모바일)</p>
-                  <p>크로스 브라우징이나 관련 정보</p>
+                  <p class="info_title">불라툰(경력 소개)</p>
+                  <p>퍼블리싱 <span>&#8226;</span> UX <span>&#8226;</span> 2018.05 ~ 2018.09 (4개월)</p>
+                  <p>경영악화로 인한 퇴사, 현재 1인 기업</p>
+                  <p>반응형 퍼블리싱 <span>&#8226;</span> UX <span>&#8226;</span> 웹애플리케이션</p>
                 </div>
               </div>
             </a>
           </div>
           <div class="project_item item_09">
-            <a href="#">
-              <img src="" alt="추가 예정입니다!">
+            <a href="project_acg.html" target="_blank">
+              <img src="../../img/project_output/output_acg.png" alt="어센더즈">
               <div class="item_info">
                 <div class="info_txtwrap">
-                  <p class="info_title">프로젝트명</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 날짜</p>
+                  <p class="info_title">ACG 에센 컨설팅 그룹(프리랜서, 경력)</p>
+                  <p>퍼블리싱 <span>&#8226;</span> 2018.03(1개월)</p>
                   <p>반응형(PC, 태블릿, 모바일)</p>
-                  <p>크로스 브라우징이나 관련 정보</p>
+                  <p>프로젝트 완료 후 계약 종료</p>
+                  <p></p>
+                  <p></p>
+                  <p></p>
                 </div>
               </div>
             </a>
           </div>
           <div class="project_item item_10">
             <a href="#">
-              <img src="" alt="추가 예정입니다!">
+              <img src="" alt="추가 예정입니다.">
               <div class="item_info">
                 <div class="info_txtwrap">
-                  <p class="info_title">프로젝트명</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 날짜</p>
-                  <p>반응형(PC, 태블릿, 모바일)</p>
-                  <p>크로스 브라우징이나 관련 정보</p>
+                  <p class="info_title"></p>
+                  <p></p>
+                  <p></p>
+                  <p></p>
                 </div>
               </div>
             </a>
           </div>
           <div class="project_item item_11">
             <a href="#">
-              <img src="" alt="추가 예정입니다!">
+              <img src="" alt="추가 예정입니다.">
               <div class="item_info">
                 <div class="info_txtwrap">
-                  <p class="info_title">프로젝트명</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 날짜</p>
-                  <p>반응형(PC, 태블릿, 모바일)</p>
-                  <p>크로스 브라우징이나 관련 정보</p>
+                  <p class="info_title"></p>
+                  <p></p>
+                  <p></p>
+                  <p></p>
                 </div>
               </div>
             </a>
           </div>
           <div class="project_item item_12">
             <a href="#">
-              <img src="" alt="추가 예정입니다!">
+              <img src="" alt="추가 예정입니다.">
               <div class="item_info">
                 <div class="info_txtwrap">
-                  <p class="info_title">프로젝트명</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 날짜</p>
-                  <p>반응형(PC, 태블릿, 모바일)</p>
-                  <p>크로스 브라우징이나 관련 정보</p>
+                  <p class="info_title"></p>
+                  <p></p>
+                  <p></p>
+                  <p></p>
                 </div>
               </div>
             </a>
