--- a/html/project/project_output.html
+++ b/html/project/project_output.html
@@ -44,6 +44,32 @@
       <div class="project_wrap">
         <div class="project_row row_01">
           <div class="project_item item_01">
+            <a href="https://haneulkimgreen.github.io/spa/html/project/stylenanda_rwd.html" target="_blank">
+              <img src="../../img/project_output/output_stylenanda_rwd.png" alt="스타일난다 - 반응형, 스크롤 기능, 스와이프를 이용한 페이지">
+              <div class="item_info">
+                <div class="info_txtwrap">
+                  <p class="info_title">스타일난다 반응형(개인, 비상업)</p>
+                  <p>퍼블리싱 <span>&#8226;</span> 2019.10 <span>&#8226;</span> 반응형(PC, 태블릿, 모바일)</p>
+                  <p>PC-영상,휠<span>&#8226;</span>태블릿-영상,스와이프<span>&#8226;</span>모바일-이미지,스와이프</p>
+                  <p>크롬(권장) <span>&#8226;</span> 파이어폭스 <span>&#8226;</span> IE11 <span>&#8226;</span> 엣지 <span>&#8226;</span> 오페라</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="project_item item_02">
+            <a href="https://haneulkimgreen.github.io/spa/html/project/stylenanda.html" target="_blank">
+              <img src="../../img/project_output/output_stylenanda.png" alt="스타일난다 - parallax, 스크롤 기능을 이용한 페이지">
+              <div class="item_info">
+                <div class="info_txtwrap">
+                  <p class="info_title">스타일난다 parallax(개인, 비상업)</p>
+                  <p>퍼블리싱 <span>&#8226;</span> 2019.10</p>
+                  <p>PC <span>&#8226;</span> parallax <span>&#8226;</span> 스크롤 마우스 휠</p>
+                  <p>크롬(권장) <span>&#8226;</span> 파이어폭스 <span>&#8226;</span> IE11 <span>&#8226;</span> 엣지 <span>&#8226;</span> 오페라</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="project_item item_03">
              <a href="https://haneulkimgreen.github.io/spa/html/project/video_netflix.html" target="_blank">
               <img src="../../img/project_output/netflix_video.png" alt="비디오 플레이어 - 넷플릭스">
               <div class="item_info">
@@ -56,7 +82,7 @@
               </div>
             </a>
           </div>
-          <div class="project_item item_02">
+          <div class="project_item item_04">
              <a href="#" target="_blank">
               <img src="../../img/project_output/netflix_my.png" alt="넷플릭스 목록 구현, 현재 프로젝트 정리 페이지로 활용">
               <div class="item_info">
@@ -69,7 +95,7 @@
               </div>
             </a>
           </div>
-          <div class="project_item item_03">
+          <div class="project_item item_05">
             <a href="https://haneulkimgreen.github.io/rwd_yg/" target="_blank">
               <img src="../../img/project_output/output_yg.png" alt="와이지 엔터테인먼트 리뉴얼">
               <div class="item_info">
@@ -82,7 +108,7 @@
               </div>
             </a>
           </div>
-          <div class="project_item item_04">
+          <div class="project_item item_06">
             <a href="https://haneulkimgreen.github.io/rwd_yg/html/yg_06_artist_detail_main.html" target="_blank">
               <img src="../../img/project_output/output_yg_artist.png" alt="와이지 엔터테인먼트 아티스트 상세페이지 리뉴얼">
               <div class="item_info">
@@ -91,32 +117,6 @@
                   <p>퍼블리싱을 포함한 전체 <span>&#8226;</span> 2018.04(1개월)</p>
                   <p>반응형(PC, 태블릿, 모바일) <span>&#8226;</span> 3페이지</p>
                   <p>크롬 <span>&#8226;</span> 파이어폭스 <span>&#8226;</span> IE11 <span>&#8226;</span> 엣지 <span>&#8226;</span> 오페라</p>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="project_item item_05">
-            <a href="#" target="_blank">
-              <img src="" alt="추가 예정입니다.">
-              <div class="item_info">
-                <div class="info_txtwrap">
-                  <p class="info_title"></p>
-                  <p></p>
-                  <p></p>
-                  <p></p>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="project_item item_06">
-            <a href="#" target="_blank">
-              <img src="" alt="추가 예정입니다.">
-              <div class="item_info">
-                <div class="info_txtwrap">
-                  <p class="info_title"></p>
-                  <p></p>
-                  <p></p>
-                  <p></p>
                 </div>
               </div>
             </a>
